    to query, and exits with an error message if it cannot reach a server
    within the timeout.  lbcdclient supports IPv6 if the IO::Socket::INET6
    Perl module is installed.

    lbcd now supports IPv6.  The bind address given with -b may be an IPv6
    address, and by default it listens to both IPv4 and IPv6 addresses on
    hosts that support IPv6.

    lbcd now considers a user to be on console if any user is logged in
    from an "address" that starts with ":0".  Modern Linux systems with a
    display manager will show console users this way rather than logins to
    tty1 or console.

    Add support for systemd.  If built on a system with systemd installed,
    lbcd will install (but not enable) systemd units to start lbcd via
    socket activation.  lbcd will also notify systemd when its
    initialization is complete if started by systemd with service
    notification enabled.  Distributors are encouraged to modify the
    provided lbcd.service file to set User and Group to a separate user
    and group created for that purpose, although this is not done in the
    default unit files due to the difficulty with creating users portably.

    Add support for upstart's expect stop daemon synchronization method.
    When starting lbcd with upstart, pass the new -Z option to lbcd, and
    it will raise SIGSTOP when ready to accept connections, signaling to
    upstart that the daemon has fully started.

    Fix source typo that prevented compilation on Mac OS X.  (It is
    probably obvious that the developer doesn't have access to Mac OS X
    systems to test compilation....)

lbcd 3.4.2 (2013-12-17)

    Support getutxent and use it in preference to getutent, falling back
    on the latter only if getutxent isn't available.  Hopefully fixes
    compilation problems on Mac OS X.

    Support FreeBSD (and Debian GNU/kFreeBSD) if /proc is mounted.

    Update to rra-c-util 4.12:

    * network_connect now resumes after being interrupted by a signal.