@@ -9,8 +9,9 @@ lbcd - Report system load for remote load balancing
 
 =head1 SYNOPSIS
 
-B<lbcd> [B<-dfhlRtZ>] [B<-b> I<address>] [B<-c> I<command>] [B<-P> I<file>]
-    [B<-p> I<port>] S<[B<-T> I<seconds>]> [B<-w> I<weight>]
+B<lbcd> [B<-dfhlRtZ>] [B<-b> I<bind-address> [B<-b> I<bind-address>]]
+    [B<-c> I<command>] [B<-P> I<file>] [B<-p> I<port>] S<[B<-T> I<seconds>]>
+    [B<-w> I<weight>]
 
 B<lbcd> B<-t> [v2] [I<service> ...]
 
@@ -97,11 +98,13 @@ queried, run multiple instances of B<lbcd>, one for each interface.
 
 =over 4
 
-=item B<-b> I<address>
+=item B<-b> I<bind-address>
 
 By default, B<lbcd> binds to all available addresses.  If this option is
 given, B<lbcd> binds only to the specified address and will only answer
-UDP queries to that address.
+UDP queries to that address.  This option may be given multiple times to
+bind to multiple addresses.  I<bind-address> must be an IP address (either
+IPv4 or IPv6), not a hostname.
 
 =item B<-c> I<command>
 
